      \item Non-blocking listening socket connections continued to
      report \code{isIncomplete} as true even when the peer had closed
      down and all available input had been read.
      
      \item The revised HTML search system now generates better
      hyperlinks to help topics found: previously it gave problems with
      help pages with names containing e.g. spaces and slashes.
    }
  }
}

\section{CHANGES IN R VERSION 2.13.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{mem.limits()} now reports values larger than the
      maximum integer (previously documented to be reported as
      \code{NA}), and allows larger values to be set, including
      \code{Inf} to remove the limit.

      \item The \code{print()} methods for classes \code{"Date"},
      \code{"POSIXct"} and \code{"POSIXlt"} respect the option
      \code{"max.print"} and so are much faster for very long datetime
      vectors.  (Suggestion of Yohan Chalabi.)

      \item \code{untar2()} now works around errors generated with
      \code{tar} files that use more than the standard 6 digits for the
      checksum. (\PR{14654})

      \item \code{install.packages()} with \code{Ncpus > 1} guards
      against simultaneous installation of indirect dependencies as well
      as direct ones.

      \item Sweave now knows about a few more Windows' encodings
      (including \code{cp1250} and \code{cp1257}) and some
      \code{inputenx} encodings such as \code{koi8-r}.

      \item \code{postscript(colormodel = "rgb-nogray")} no longer sets
      the sRGB colorspace for each colour and so some viewers may render
      its files much faster than the default \code{colormodel ="rgb"}.

      \item The default for \code{pdf(maxRasters=)} has been increased
	from 64 to 1000.

      \item \code{readBin()} now warns if \code{signed = FALSE} is used
      inappropriately (rather than being silently ignored).

      It enforces the documented limit of \eqn{2^{31}-1}{2^31-1} bytes